aya-assembly/src/parser/instructions/snapshots/aya_parser__parser__instructions__jeq__tests__jeq_lit.snap
---
source: aya-parser/src/parser/instructions/jeq.rs
expression: result
---
Instruction(
    JeqLit(
        Address(
            ByteOffset {
                start: 7,
                end: 11,
            },
        ),
        HexLiteral(
            ByteOffset {
                start: 15,
                end: 19,
            },
        ),
    ),
)
