aya-assembly/src/parser/instructions/snapshots/aya_parser__parser__instructions__jeq__tests__jeq_reg.snap
---
source: aya-parser/src/parser/instructions/jeq.rs
expression: result
---
Instruction(
    JeqReg(
        Address(
            ByteOffset {
                start: 7,
                end: 11,
            },
        ),
        Register(
            ByteOffset {
                start: 14,
                end: 16,
            },
        ),
    ),
)
